# bot-farm-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  TODOS.md  data-snapshot.json  db.sqlite3  docker-compose-prod.yml  docker-compose.yml  docker_doc.txt  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  reset_database.sh
codex_test/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: admin.py  aggregates.py  enums.py  fake_urls.py  fields.py  filters.py  models.py  patterns.py  routers.py  serializers.py  services.py  swagger_schema.py  throttles.py  urls.py  utils.py  views.py
myapp/management/commands/: generate_fake_bot_data.py  reset_db.py
myapp/migrations/: 0001_initial.py  0002_attacktype_delete_xssattack.py  0002_xssattack_and_more.py  0003_rename_xss_attempted_botevent_attack_attempted.py  0004_botevent_origin_alter_botevent_attack_attempted_and_more.py  0005_alter_attacktype_category_and_more.py
myapp/tests/: conftest.py  factories.py  test_admin_api.py  test_contact_bot.py  test_honeypot_endpoint.py  test_honeypot_view.py  test_service.py  test_utils.py  test_view_interconnections.py  test_views.py
templates/: fake_form.html
